--- a/axis.html
+++ b/axis.html
@@ -44,9 +44,9 @@
                       <div class="tab active">
                         <py-script src="app.py">
                           <p style="margin: 10px;">CONCLUSION</p>
-                            <img src="http://127.0.0.1:5000/axisplot_png.png" alt="" width="100%" height="500px">
+                            <img src="https://marketnitee.onrender.com/axisplot_png.png" alt="" width="100%" height="500px">
                             <!-- <iframe src="http://127.0.0.1:5000/plot.png" width="100%" height="400"></iframe> -->
-                            <iframe src="http://127.0.0.1:5000/axisbank" width="100%" height="400"></iframe>
+                            <iframe src="https://marketnitee.onrender.com/axisbank" width="100%" height="400"></iframe>
                         </py-script>
                       </div>
                       <div class="tab">
