--- a/icicibank.html
+++ b/icicibank.html
@@ -46,7 +46,7 @@
                           <p style="margin: 10px;">CONCLUSION</p>
                             <img src="https://backend-11ud.onrender.com/iciciplot_png.png" alt="" width="100%" height="500px">
                             <!-- <iframe src="http://127.0.0.1:5000/plot.png" width="100%" height="400"></iframe> -->
-                            <iframe src="https://backend-11ud.onrender.com/icicibank" width="100%" height="400"></iframe>
+                            <iframe src="https://backend-11ud.onrender.com/ICICI" width="100%" height="400"></iframe>
                         </py-script>
                       </div>
                       <div class="tab">
