--- a/tatam.html
+++ b/tatam.html
@@ -39,7 +39,7 @@
                       <li>VOTES</li>
                       <li>COMMENTS</li>
                     </ul>
-		
+		<div>
                     <div id="tab-content">
                       <div class="tab active">
                     
