--- a/reliance.html
+++ b/reliance.html
@@ -41,7 +41,11 @@
                     <div id="tab-content">
                       <div class="tab active">
                         
-                            <iframe src="https://reliance.onrender.com" width="100%" height="400"></iframe>
+                            <iframe src="https://reliance.onrender.com" width="100%" height="400" style="  
+            height: 100vh;    
+            width: 100vw;     
+            border: none; 
+            background: #fff; "></iframe>
                        
                       </div>
                       </div>
