--- a/reliance.html
+++ b/reliance.html
@@ -41,7 +41,7 @@
                     <div id="tab-content">
                       <div class="tab active">
                         
-                            <iframe src="https://reliance.onrender.com" width="100%" height="400" style="  
+                            <iframe src="https://reliance-i5l1.onrender.com/" width="100%" height="400" style="  
             height: 100vh;    
             width: 100vw;     
             border: none; 
