--- a/axis.html
+++ b/axis.html
@@ -33,23 +33,23 @@
                 <!-- TradingView Widget END -->
                 </div>
 
-                <div id="tab-wrapper">
+              <div id="tab-wrapper">
                     <ul id="tab-buttons">
-                      <li class="active">ANALYSIS</li>
+                      <li class="active">ANALYSIS</li> 
                       <li>COMMENTS</li>
                     </ul>
+		<div>
                     <div id="tab-content">
                       <div class="tab active">
-                       
-                            <iframe src="https://axis-8w7o.onrender.com/" width="100%" height="400"
-				    style="  
+                    	<div>
+                          <h2 style="margin: 10px;">CONCLUSION</h2>
+			  <iframe src="https://axis-8w7o.onrender.com/" style="  
             height: 100vh;    
             width: 100vw;     
             border: none; 
             background: #fff; "></iframe>
-                        
-                      </div>
-                      </div>
+			      </div>
+			    </div>
                       <div class="tab">
                         <div class="container">
                           <div class="comment-box">
@@ -70,6 +70,7 @@
                               <div id="comments"></div>
                             </div>
                           </div>
+			</div>
                         </div>
                         <script>
                           var config = {
