--- a/tatam.html
+++ b/tatam.html
@@ -43,11 +43,18 @@
                       <div class="tab active">
                     	<div>
                           <h2 style="margin: 10px;">CONCLUSION</h2>
+				<iframe src="https://todaysanalysis.onrender.com/" style="  
+            height: 100vh;    
+            width: 100vw;     
+            border: none; 
+            background: #fff; "></iframe>
 			  <iframe src="https://tatamotor.onrender.com" style="  
             height: 100vh;    
             width: 100vw;     
             border: none; 
             background: #fff; "></iframe>
+				
+				
 			      </div>
 			    </div>
                       <div class="tab">
