--- a/tatam.html
+++ b/tatam.html
@@ -44,8 +44,8 @@
                     	<div>
                           <h2 style="margin: 10px;">CONCLUSION</h2>
 				<iframe src="https://todaysanalysis.onrender.com/" style="  
-            height: 100vh;    
-            width: 100vw;     
+            height:40%;   
+            width: 100%;     
             border: none; 
             background: #fff; "></iframe>
 			  <iframe src="https://tatamotor.onrender.com/" style="  
