--- a/tatam.html
+++ b/tatam.html
@@ -20,7 +20,7 @@
                   "autosize": true,
                   "symbol": "NSE-TATAMOTORS",
                   "interval": "D",
-                  "timezone": "Etc/UTC",
+                  "timezone": "UTC+05:30",
                   "theme": "Black",
                   "style": "1",
                   "locale": "en",
