--- a/reliance.html
+++ b/reliance.html
@@ -43,6 +43,11 @@
                       <div class="tab active">
                     	<div>
                           <h2 style="margin: 10px;">CONCLUSION</h2>
+				<iframe src="https://reltooday.onrender.com/" style="  
+            height:40%;   
+            width: 100%;     
+            border: none; 
+            background: #fff; "></iframe>
 			  <iframe src="https://reliance-i5l1.onrender.com/" style="  
             height: 100vh;    
             width: 100vw;     
