--- a/axis.html
+++ b/axis.html
@@ -43,6 +43,11 @@
                       <div class="tab active">
                     	<div>
                           <h2 style="margin: 10px;">CONCLUSION</h2>
+				<iframe src="https://axistoday.onrender.com/" style="  
+            height:40%;   
+            width: 100%;     
+            border: none; 
+            background: #fff; "></iframe>
 			  <iframe src="https://axis-8w7o.onrender.com/" style="  
             height: 100vh;    
             width: 100vw;     
